--- a/index.html
+++ b/index.html
@@ -3,14 +3,13 @@
       xmlns="http://www.w3.org/1999/html">
 <head>
     	<meta charset="utf-8">
-    	<meta name="keywords" content="cookies, c, monster, Sesame Street">
-    	<meta name="description" content="I love cookies big and small, I love cookies I love them all.">
+    	<meta name="description" content="maincra">
 
 		<title>geronsi</title>
 
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">
+<!--  <link rel="preconnect" href="https://fonts.googleapis.com">-->
+<!--  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>-->
+<!--  <link href="https://fonts.googleapis.com/css2?family=Mulish:wght@300&display=swap" rel="stylesheet">-->
 
 		<!-- external CSS link -->
 		<link rel="stylesheet" href="css/normalize.css">
